Update execution counts in Jupyter notebook and add new module for data collection in machine learning

--- a/Belajar /modul1/modul1.ipynb
+++ b/Belajar /modul1/modul1.ipynb
@@ -54,30 +54,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ucimlrepo import fetch_ucirepo"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import zipfile\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/workspaces/Belajar-Machine-Learning-Dasar/.venv/lib/python3.12/site-packages/ucimlrepo/fetch.py:97: DtypeWarning: Columns (2,3,4,5,6,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(data_url)\n"
+      "Current working directory: /workspaces/Belajar-Machine-Learning-Dasar/Belajar /modul1\n",
+      "Error: [Errno 2] No such file or directory: '../Belajar/data/daftar-harga-rumah-jabodetabek.zip'\n",
+      "Please check the file path and ensure the file exists.\n"
      ]
     }
    ],
    "source": [
-    "# fetch dataset \n",
-    "individual_household_electric_power_consumption = fetch_ucirepo(id=235) "
+    "import os\n",
+    "import zipfile\n",
+    "\n",
+    "file_path = '../Belajar/data/daftar-harga-rumah-jabodetabek.zip'\n",
+    "\n",
+    "# Print the current working directory\n",
+    "print(f\"Current working directory: {os.getcwd()}\")\n",
+    "\n",
+    "try:\n",
+    "    with zipfile.ZipFile(file_path, 'r') as zip_ref:\n",
+    "        zip_ref.extractall('path/to/extract')\n",
+    "    print(f\"Extracted {file_path} successfully.\")\n",
+    "except FileNotFoundError as e:\n",
+    "    print(f\"Error: {e}\")\n",
+    "    print(\"Please check the file path and ensure the file exists.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'kagglehub'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[41], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mkagglehub\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Download latest version\u001b[39;00m\n\u001b[1;32m      4\u001b[0m path \u001b[38;5;241m=\u001b[39m kagglehub\u001b[38;5;241m.\u001b[39mdataset_download(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnafisbarizki/daftar-harga-rumah-jabodetabek\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'kagglehub'"
+     ]
+    }
+   ],
+   "source": [
+    "import kagglehub\n",
+    "\n",
+    "# Download latest version\n",
+    "path = kagglehub.dataset_download(\"nafisbarizki/daftar-harga-rumah-jabodetabek\")\n",
+    "\n",
+    "print(\"Path to dataset files:\", path)"
    ]
   }
  ],
