--- a/Belajar /main.ipynb
+++ b/Belajar /main.ipynb
@@ -154,7 +154,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
