feat/Data-loading1.1/Data-loading/analisa data

--- a/Machine Learning Prediction Iphone Indonesia/clustering.ipynb/latihan.ipynb
+++ b/Machine Learning Prediction Iphone Indonesia/clustering.ipynb/latihan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "0  Medan                     4  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "0          2023                    1           0.9                     1  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "0           25218          12         3     7000000        15  17850000.0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
        "0          12           0.7  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "0  Medan                     4  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
        "9           9           0.5  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,12 +760,12 @@
    "source": [
     "# mengecek kembali data yang null dan melihat hasilnya\n",
     "transaction.isnull().sum()\n",
-    "transaction.head(10)\n"
+    "transaction.head(1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1005,18 +1005,18 @@
        "9   66   Jakarta                    11  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "customer.head(10)"
+    "customer.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1089,7 @@
        "4   51   Bandung                     3"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,13 +1099,13 @@
     "customer_df = customer.drop(['customer_id', 'name', 'email', 'address', 'phone_number'], axis=1)\n",
     "\n",
     "# Menampilkan data setelah pembersihan\n",
-    "customer_df.head()\n",
+    "customer_df.head(5)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1189,42 +1189,123 @@
        "      <td>Red</td>\n",
        "      <td>2022</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>iPhone 14 Plus</td>\n",
+       "      <td>12000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>256GB</td>\n",
+       "      <td>Green</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>iPhone 14 Pro</td>\n",
+       "      <td>15000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>512GB</td>\n",
+       "      <td>Purple</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>iPhone 14 Pro Max</td>\n",
+       "      <td>17000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>128GB</td>\n",
+       "      <td>Yellow</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>iPhone SE (3rd Gen)</td>\n",
+       "      <td>7000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>64GB</td>\n",
+       "      <td>White</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>iPhone 13</td>\n",
+       "      <td>10000000</td>\n",
+       "      <td>15</td>\n",
+       "      <td>128GB</td>\n",
+       "      <td>Pink</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>iPhone 13 Pro</td>\n",
+       "      <td>13000000</td>\n",
+       "      <td>15</td>\n",
+       "      <td>256GB</td>\n",
+       "      <td>Silver</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>iPhone 13 Pro Max</td>\n",
+       "      <td>15000000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>512GB</td>\n",
+       "      <td>Space Gray</td>\n",
+       "      <td>2021</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   product_id       product_name     price  discount storage   color  \\\n",
-       "0           1          iPhone 15  12000000        15   128GB   Black   \n",
-       "1           2     iPhone 15 Plus  13000000        15   256GB    Blue   \n",
-       "2           3      iPhone 15 Pro  16000000        10   512GB  Silver   \n",
-       "3           4  iPhone 15 Pro Max  18000000         5     1TB    Gold   \n",
-       "4           5          iPhone 14  11000000        15   128GB     Red   \n",
+       "    product_id         product_name     price  discount storage       color  \\\n",
+       "0            1            iPhone 15  12000000        15   128GB       Black   \n",
+       "1            2       iPhone 15 Plus  13000000        15   256GB        Blue   \n",
+       "2            3        iPhone 15 Pro  16000000        10   512GB      Silver   \n",
+       "3            4    iPhone 15 Pro Max  18000000         5     1TB        Gold   \n",
+       "4            5            iPhone 14  11000000        15   128GB         Red   \n",
+       "5            6       iPhone 14 Plus  12000000         5   256GB       Green   \n",
+       "6            7        iPhone 14 Pro  15000000         5   512GB      Purple   \n",
+       "7            8    iPhone 14 Pro Max  17000000         0   128GB      Yellow   \n",
+       "8            9  iPhone SE (3rd Gen)   7000000         5    64GB       White   \n",
+       "9           10            iPhone 13  10000000        15   128GB        Pink   \n",
+       "10          11        iPhone 13 Pro  13000000        15   256GB      Silver   \n",
+       "11          12    iPhone 13 Pro Max  15000000         5   512GB  Space Gray   \n",
        "\n",
-       "   release_year  \n",
-       "0          2023  \n",
-       "1          2023  \n",
-       "2          2023  \n",
-       "3          2023  \n",
-       "4          2022  "
+       "    release_year  \n",
+       "0           2023  \n",
+       "1           2023  \n",
+       "2           2023  \n",
+       "3           2023  \n",
+       "4           2022  \n",
+       "5           2022  \n",
+       "6           2022  \n",
+       "7           2022  \n",
+       "8           2021  \n",
+       "9           2021  \n",
+       "10          2021  \n",
+       "11          2021  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Hapus kolom yang tidak relevan\n",
-    "product_df = product.drop([ 'category', 'description', 'brand', 'years_since_release','preferred_product_id','sales_factor'], axis=1)\n",
-    "\n",
-    "# Menampilkan data setelah pembersihan\n",
-    "product_df.head()"
+    "product_df = product.drop([ 'category', 'description', 'brand', 'years_since_release','preferred_product_id','sales_factor'], axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1353,7 +1434,7 @@
        "4           0.7  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1366,167 +1447,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>transaction_id</th>\n",
-       "      <th>product_id</th>\n",
-       "      <th>quantity</th>\n",
-       "      <th>unit_price</th>\n",
-       "      <th>discount</th>\n",
-       "      <th>total</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>25218</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3</td>\n",
-       "      <td>7000000</td>\n",
-       "      <td>15</td>\n",
-       "      <td>17850000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>78866</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>15000000</td>\n",
-       "      <td>15</td>\n",
-       "      <td>12750000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>71024</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>11000000</td>\n",
-       "      <td>15</td>\n",
-       "      <td>28050000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>45980</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "      <td>12000000</td>\n",
-       "      <td>15</td>\n",
-       "      <td>40800000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>35845</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>17000000</td>\n",
-       "      <td>15</td>\n",
-       "      <td>43350000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>695</th>\n",
-       "      <td>80933</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>17000000</td>\n",
-       "      <td>5</td>\n",
-       "      <td>16150000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>696</th>\n",
-       "      <td>28260</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>18000000</td>\n",
-       "      <td>15</td>\n",
-       "      <td>61200000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>697</th>\n",
-       "      <td>7532</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>17000000</td>\n",
-       "      <td>5</td>\n",
-       "      <td>16150000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>698</th>\n",
-       "      <td>40807</td>\n",
-       "      <td>10</td>\n",
-       "      <td>4</td>\n",
-       "      <td>12000000</td>\n",
-       "      <td>5</td>\n",
-       "      <td>45600000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>699</th>\n",
-       "      <td>83393</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>16000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>32000000.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>700 rows × 6 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     transaction_id  product_id  quantity  unit_price  discount       total\n",
-       "0             25218          12         3     7000000        15  17850000.0\n",
-       "1             78866           9         1    15000000        15  12750000.0\n",
-       "2             71024           1         3    11000000        15  28050000.0\n",
-       "3             45980           6         4    12000000        15  40800000.0\n",
-       "4             35845           4         3    17000000        15  43350000.0\n",
-       "..              ...         ...       ...         ...       ...         ...\n",
-       "695           80933           5         1    17000000         5  16150000.0\n",
-       "696           28260           7         4    18000000        15  61200000.0\n",
-       "697            7532           1         1    17000000         5  16150000.0\n",
-       "698           40807          10         4    12000000         5  45600000.0\n",
-       "699           83393           3         2    16000000         0  32000000.0\n",
-       "\n",
-       "[700 rows x 6 columns]"
+       "array(['Black', 'Blue', 'Silver', 'Gold', 'Red', 'Green', 'Purple',\n",
+       "       'Yellow', 'White', 'Pink', 'Space Gray'], dtype=object)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "transaction_deatil.head(700)"
+    "product['color'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "# Merge data berdasarkan customer_id, city, dan product_id yang sesuai dengan preferred_product_id\n",
+    "merged_data = pd.merge(transaction, customer, \n",
+    "                       left_on=['city', 'product_id'], \n",
+    "                       right_on=['city', 'preferred_product_id'], \n",
+    "                       how='left')\n",
+    "merged_data.head(10)"
    ]
   }
  ],
